# Algorytmy

./: LICENSE  README.md
Lista_2/: .travis.yml  CMakeLists.txt  README.md  coin.c  coin.h  list.c  list.h  mon1.c  mon2.c  mon2easy.c  portfel.c  portfel.h  sposobwydawania.c  sposobwydawania.h
Lista_2/script/: test.sh
Lista_3/: CMakeLists.txt  avl.c  avl.h  main.c
Lista_4/: .travis.yml  CMakeLists.txt  test.sh
Lista_4/Cykl/: CMakeLists.txt  Stack.c  graf.c  graf.h  main.c
Lista_4/ElGoog/: CMakeLists.txt  main.c  zadanie.c  zadanie.h
Lista_4/Inwersje/: CMakeLists.txt  main.c
Lista_4/Podciag/: CMakeLists.txt  main.c
